# gxmc

./: .gitignore  CMakeLists.txt  LICENSE
benchmark/plateImpact/: plateImpact.exo  plateImpact.jou
benchmark/sphereWallImpact/: brickWallImpact.jou  sphereWallImpact (2).exo  sphereWallImpact.exo  sphereWallImpact.jou
benchmark/taylorBar/: taylor.txt  taylor2d.txt  taylorBar.exo  tettaylorBar.exo
benchmark/wave/: bardense.exo  etest.exo  tetWave.exo
include/: HexCell.h  HexCellFem.h  HexCellRK.h  PostProcessing.h  Search.h  TetCell.h  TetCellFem.h  gxcBlock.h  gxcBlockInfo.h  gxcCell.h  gxcControl.h  gxcEcho.h  gxcFace.h  gxcInitiate.h  gxcMath.h  gxcMeshfreeInfo.h  gxcNode.h  gxcNodeSet.h  gxcProblem.h  gxcType.h
src/: ForDebug.txt  HexCell.cxx  HexCellFem.cxx  HexCellRK.cxx  PostProcessing.cxx  ReadControl.cxx  ReadModel.cxx  Search.cxx  StateInitiate.cxx  TetCell.cxx  TetCellFem.cxx  gxcBlockInfo.cxx  gxcCell.cxx  gxcEcho.cxx  gxcFace.cxx  gxcMath.cxx  gxcNode.cxx  gxcNodeSet.cxx  gxcProblem.cxx  main.cxx
